--- a/package.json
+++ b/package.json
@@ -19,15 +19,19 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ionic-native/bluetooth-le": "^5.23.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/star-prnt": "^5.23.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "cordova-android": "8.1.0",
     "cordova-ios": "^5.1.1",
+    "cordova-plugin-bluetoothle": "^4.5.9",
     "cordova-plugin-starprnt": "^2.2.0",
     "core-js": "^2.5.4",
     "moment": "^2.24.0",
+    "ngx-socket-io": "^3.0.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -76,10 +80,12 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-starprnt": {}
+      "cordova-plugin-starprnt": {},
+      "cordova-plugin-bluetoothle": {}
     },
     "platforms": [
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
