--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/native-audio": "^5.28.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/star-prnt": "^5.27.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -48,6 +49,7 @@
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
+    "cordova-plugin-nativeaudio": "^3.0.9",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -73,7 +75,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-starprnt": {},
-      "nodejs-mobile-cordova": {}
+      "nodejs-mobile-cordova": {},
+      "cordova-plugin-nativeaudio": {}
     },
     "platforms": [
       "ios"
