--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic/storage": "^2.2.0",
     "cordova-android": "8.1.0",
     "cordova-ios": "5.1.1",
+    "macos-release": "^3.0.1",
     "moment": "^2.27.0",
     "ngx-socket-io": "^3.2.0",
     "nodejs-mobile-cordova": "^0.4.1",
@@ -53,6 +54,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.0.0",
@@ -76,7 +78,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-starprnt": {},
       "nodejs-mobile-cordova": {},
-      "cordova-plugin-nativeaudio": {}
+      "cordova-plugin-nativeaudio": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "ios"
